# slm-lab-case-template

./: cookiecutter.json
{{cookiecutter.project_slug}}/: .env  .gitignore  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/configs/: default.yaml
{{cookiecutter.project_slug}}/configs/methods/: sft_lora.yaml
{{cookiecutter.project_slug}}/configs/models/: model.yaml
{{cookiecutter.project_slug}}/data/eval/: golden_tests.yaml  unimarc_golden_tests.yaml
{{cookiecutter.project_slug}}/scripts/: smoke_eval.sh
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slugreplace('-', '_')}}/io/: loader_hf.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/io/: loader_hf.py
