[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
requires-python = ">={{cookiecutter.python_min}}"
dependencies = [
  "slm_lab_core",
  "transformers>=4.44",
  "datasets>=2.21",
  "peft>=0.11",
  "evaluate>=0.4",
  "typer",
  "lxml",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["{{cookiecutter.project_slug}}"]

[tool.uv.sources]
slm_lab_core = { git = "{{cookiecutter.core_repo_url}}" }