[project]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
requires-python = ">={{cookiecutter.python_min}}"
dependencies = [
  "slm-lab-core",
  "datasets>=2.21",
  "peft>=0.11",
  "evaluate>=0.4",
  "typer",
  "lxml",
  "ipykernel"
]

[tool.setuptools]
packages = ["{{cookiecutter.project_slug}}"]

[tool.uv.sources]
slm-lab-core = { git = "{{cookiecutter.core_repo_url}}" }
transformers = { git = "https://github.com/huggingface/transformers" }